Fix alignment on text columns text

--- a/assets/index.css
+++ b/assets/index.css
@@ -12511,8 +12511,8 @@ div[data-media-type='external_video'] iframe {
   .text-columns__middle {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
 
